--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: go
 sudo: false
 go:
   - "1.11.4"
+env:
+  - GO111MODULE=on
 before_install:
   - go get github.com/mattn/goveralls
 script:
