--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
 language: go
-sudo: false
 go:
   - "1.11.4"
 env:
   - GO111MODULE=on
-before_install:
-  - go get github.com/mattn/goveralls
-script:
-  - $GOPATH/bin/goveralls -service=travis-ci
+script: 
+  - go test -v ./...
+  - make build
